bener bener final kali ini

--- a/plantcaresystem/src/main/resources/com/mycompany/plantcaresystem/plantManagement.fxml
+++ b/plantcaresystem/src/main/resources/com/mycompany/plantcaresystem/plantManagement.fxml
@@ -30,6 +30,7 @@
                 <TextField fx:id="ageField" promptText="Usia (minggu)" />
                 <TextField fx:id="userIdField" promptText="Owner User ID" />
                 <Button text="Add" onAction="#addPlant"/>
+                <Button text="Update" onAction="#updatePlant"/>
             </HBox>
 
             <ListView fx:id="listPlants" prefHeight="350" prefWidth="500"/>
