--- a/plantcaresystem/src/main/resources/com/mycompany/plantcaresystem/plantManagement.fxml
+++ b/plantcaresystem/src/main/resources/com/mycompany/plantcaresystem/plantManagement.fxml
@@ -8,11 +8,11 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.mycompany.plantcaresystem.controllers.PlantController">
-
-    <top>
-        <HBox spacing="10" style="-fx-padding: 10;">
-            <Button text="⬅ Back" onAction="#goBack"/>
+            fx:controller="com.mycompany.plantcaresystem.controllers.PlantController"
+            prefWidth="800.0" prefHeight="600.0">
+            <top>
+        <HBox spacing="10" style="-fx-padding: 10;" styleClass="top-panel">
+            <Button text="⬅ Back" onAction="#goBack" styleClass="button, small"/>
             <Label text="MANAGEMENT TANAMAN"
                    style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
             <Region>
